Skip parsing nested svg element

The SVG Tiny 1.2 does not allow nested svg elements in an SVG Document.
With the current implementation, the parser will create more than one
QSvgTinyDocument class, and it will stop parsing the SVG file at a wrong
position, because the done flag does not cover this case.

Fixes: QTBUG-121981
Change-Id: Idbba6524c6acbad20946cfe47f4f812ce6e11d23
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit b2d9b36c15654c89f0eecabde5f2edf32ea14162)